docs: atualizando manual do sistema